added some styling

--- a/Restaurant Bridge Project/Views/Customers/Index.cshtml
+++ b/Restaurant Bridge Project/Views/Customers/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    <button class="button" id="customerindex">   @Html.ActionLink("Create New", "Create")</button>
 </p>
 <table class="table">
     <tr>
