--- a/Restaurant Bridge Project/Content/Site.css
+++ b/Restaurant Bridge Project/Content/Site.css
@@ -22,3 +22,26 @@ select,
 textarea {
     max-width: 280px;
 }
+
+#addresscreate{
+    background-color:blueviolet;
+}
+
+
+#menudetails{
+    background-color:deeppink;
+
+
+}
+
+#menuindex{
+    background-color:orangered;
+}
+
+#customercreate{
+    background-color:firebrick;
+}
+
+#customerindex{
+    background-color:seagreen;
+}
