--- a/Restaurant Bridge Project/Views/Customers/Create.cshtml
+++ b/Restaurant Bridge Project/Views/Customers/Create.cshtml
@@ -72,7 +72,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    <button class="button" id="customercreate">  @Html.ActionLink("Back to List", "Index")</button>
 </div>
 
 @section Scripts {
